# Janela_Ideias

./: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  project_context.md  pyproject.toml  requirements.txt
Templates/: catalogo_startup.html  home_pagina.html  perfil_projeto.html  perfil_startup.html
app/: settings.py  urls.py
css/: adm_alternativo.css  pagina_catalogo.css  pagina_home.css  rodape_pagina.css
inova/: admin.py  apps.py  forms.py  models.py  views.py
inova/migrations/: 0001_initial.py  0002_administrador_membro_projeto_membros_socio.py  0002_alter_startup_cnpj.py  0002_noticia.py  0002_projeto_coordenador_membroprojeto.py  0003_alter_projeto_coordenador.py  0003_alter_projeto_membros_alter_socio_formacao_and_more.py  0003_noticia_imagem.py  0003_startup_logo_startup.py  0004_alter_membroprojeto_membro_and_more.py  0004_alter_startup_logo_startup.py  0004_noticia_link.py  0004_remove_membro_startup_membro_email_membro_formacao_and_more.py  0005_alter_membroprojeto_membro.py  0005_linkformulario.py  0005_noticias.py  0005_remove_projeto_membros_remove_membro_startups_and_more.py  0006_alter_linkformulario_data.py  0006_alter_membroprojeto_projeto.py  0006_remove_membro_startup_delete_administrador_and_more.py  0006_startup_descricao.py  0007_administrador_foto_membro_foto_alter_startup_cnpj_and_more.py  0007_administrador_membro.py  0007_alter_linkformulario_data.py  0007_startup_bairro_startup_cep_startup_cidade_and_more.py  0008_categorianoticia.py  0008_noticias_data_projeto.py  0008_projeto.py  0008_remove_administrador_last_login_and_more.py  0009_popular_categorias_iniciais.py  0009_remove_noticias_data.py  0010_alter_projeto_table.py  0010_delete_categorianoticia.py  0011_alter_noticia_categoria_alter_startup_tamanho_equipe.py  0011_alter_projeto_table.py  0012_merge_0008_projeto_0011_alter_projeto_table.py  0012_startup_data_criacao.py  0013_alter_linkformulario_options.py  0013_projeto_logo_projeto.py  0014_linkformulario_administrador_startup_administrador.py  (+10 more)
static/: admin.js
static/css/: catalogo.css  como-participar-localizaçao.css  custom_admin.css  footer.css  header.css  hero.css  home.css  inicial.css  news.css  pagina_catalogo.css  pagina_home.css  pagina_startup.css  (+14 more)
templates/: adm_alternativo.html  catalogo.html  catalogo_startup.html  home.html  home_pagina.html  perfil.html  perfil_projeto.html  perfil_startup.html
(+14 files in other folders)
