[tool.poetry]
name = "dependencias"
version = "0.1.0"
description = ""
authors = ["lanny"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.7.2"
attrs = "23.2.0"
babel = "2.10.3"
bcrypt = "3.2.2"
blinker = "1.7.0"
certifi = "2023.11.17"
chardet = "5.2.0"
click = "8.1.6"
colorama = "0.4.6"
cryptography = "41.0.7"
django = "4.2.11"
fasteners = "0.18"
idna = "3.6"
jinja2 = "3.1.2"
jsonpatch = "1.32"
jsonschema = "4.10.3"
lazr-restfulclient = "0.14.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
monotonic = "1.6"
netifaces = "0.11.0"
oauthlib = "3.2.2"
paramiko = "2.12.0"
pexpect = "4.9.0"
pillow = "10.2.0"
psycopg2 = "2.9.9"
pyjwt = "2.7.0"
pynacl = "1.5.0"
pytz = "2024.1"
requests = "2.31.0"
rich = "13.7.1"
setuptools = "68.1.2"
six = "1.16.0"
sqlparse = "0.4.4"
typing-extensions = "4.10.0"
urllib3 = "2.0.7"
wheel = "0.42.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
