[tool.poetry]
name = "inbate"
version = "0.1.0"
description = "inbate"
authors = ["crisly"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
django-cors-headers = "^4.4.0"
pillow = "^10.4.0"


[tool.poetry.group.psycopg.dependencies]
psycopg2-binary = "^2.9.9"
psycopg = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"